--- a/ProductList/Views/Home/Index.cshtml
+++ b/ProductList/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <table style="width: 100%; border: 5px solid black">
     <tr>
         <td style="width: 200px; padding: 10px;">
-            <img src="~/" style="width: 100%; height: auto;" />
+            <img src="~/Images/University-of-Pretoria.png" style="width: 100%; height: auto;" />
         </td>
         <td style="padding: 10px;">
             <b>Name: </b>Declan<br />
